# Cognitive-Enforcement-Framework

./: .dockerignore  .editorconfig  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .semgrep.yml  .yamllint.yml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DECISION_TRACE.md  GOVERNANCE.md  LICENSE  README.md  RELEASE_POLICY.md  RISK_REGISTER.md  SECURITY.md  STYLEGUIDE.md  ToolAgent - 01_Policy_and_Meta.md  ToolAgent - 02_Components.md  ToolAgent - 03_Enforcement.md  ToolAgent - 04_Semantic_Rules_and_XRef.md  ToolAgent - 05_Appendices_and_Versioning.md  ToolAgent - 06_Cognitive_Bias_Prevention.yaml  eslint.config.js  mypy.ini  package-lock.json  package.json  pyproject.toml  ruff.toml  tsconfig.json
.config/codex/: config.toml
.github/: FUNDING.yml
.github/workflows/: 01-bootstrap.yml  02-lint.yml  03-typecheck.yml  04-build.yml  05-tests.yml  06-security.yml
codeql/.codeql/: config.yml
codeql/queries/: sample.ql
k8s/base/: deployment.yaml
policy/kyverno/: sample.yaml
policy/opa/: sample.rego
schema_registry/: checks.py
src/application/: validators.py
src/domain/: errors.py
src/domain/value_objects/: email.py  iban.py  money.py  units.py
src/infrastructure/concurrency/: lifecycle.py
src/infrastructure/config/: schema.py
src/infrastructure/fs/: atomic_write.py
src/infrastructure/http/: client.py  idempotency.py
src/infrastructure/middleware/: pii_redaction.py
src/infrastructure/observability/: otel.py
tools/ci/: api_reality_check.py  check_placeholders.py  determinism_probe.py
(+8 files in other folders)
