[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deterministic-guards"
version = "0.1.0"
description = "Suite di protezioni deterministiche e gates bloccanti"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "ruff>=0.5.0",
  "black>=24.0.0",
  "pytest>=8.0.0",
  "pytest-cov>=4.1.0",
  "hypothesis>=6.98.0",
  "semgrep>=1.69.0",
  "detect-secrets>=1.5.0",
  "bandit>=1.7.7",
  "requests>=2.32.0",
  "opentelemetry-sdk>=1.26.0",
  "opentelemetry-exporter-otlp>=1.26.0",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
preview = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","W","I","B","C90","UP","RUF"]
ignore = ["E203"]
fix = false

[tool.ruff.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
addopts = "-q --disable-warnings --maxfail=1"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_no_return = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
pretty = true
